Initial rewrite and moving stringout to this repo